--- a/css/small-device.css
+++ b/css/small-device.css
@@ -211,8 +211,16 @@
     padding: 20px 0 0 90px;
   }
 
-  .picture_most_popular img {
-    margin-bottom: 10px;
+  .picture_most_popular1 {
+    background-size: 74%;
+  }
+
+  .picture_most_popular2 {
+    background-size: 66%;
+  }
+
+  .picture_most_popular3 {
+    background-size: 47%;
   }
 
   /*hosting*/
@@ -250,31 +258,50 @@
   .picture_hosting_1 {
     margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
+    background-size: 100%;
+    height: auto;
+    border-radius: 20px;
   }
 
   .picture_hosting_2 {
     margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
+    background-size: 100%;
+    height: auto;
+    border-radius: 20px;
   }
 
   .picture_hosting_3 {
     margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
+    background-size: 100%;
+    height: auto;
+    border-radius: 20px;
   }
 
   .picture_hosting_4 {
     margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
+    background-size: 100%;
+    height: auto;
+    border-radius: 20px;
   }
 
   .picture_hosting_5 {
     margin: 0 0 12px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
+    background-size: 100%;
+    height: auto;
+    border-radius: 20px;
+    background-position: top;
   }
 
   .picture_hosting_6 {
     margin: 0 0 30px 0;
     box-shadow: 0px 0px 10px #d9d9d9;
+    background-size: 100%;
+    height: auto;
+    border-radius: 20px;
   }
 
   .description_picture1 {
@@ -302,11 +329,13 @@
   }
 
   .contain_description_picture_top {
-    margin: 115px -2px -2px -4px;
+    margin: 100px -2px -2px -4px;
+    min-height: 0;
   }
 
   .contain_description_picture_bottom {
-    margin: 115px -2px -2px -4px;
+    margin: 100px -2px -2px -4px;
+    min-height: 0;
   }
 
   .picture_hosting span {
@@ -331,10 +360,11 @@
     margin: 0 0 20px 0;
     height: 190px;
     width: auto;
+    background-size: 102%;
   }
 
   .picture1 h2 {
-    margin-top: 132px;
+    margin-top: 125px;
   }
 
   .picture_activity2-3 {
@@ -348,7 +378,7 @@
   }
 
   .picture2 h2 {
-    margin-top: 132px;
+    margin-top: 125px;
   }
 
   .picture3 {
@@ -357,17 +387,18 @@
   }
 
   .picture3 h2 {
-    margin-top: 132px;
+    margin-top: 125px;
   }
 
   .picture4 {
     margin: 0 0 20px 0;
     height: 190px;
     width: auto;
+    background-size: 102%;
   }
 
   .picture4 h2 {
-    margin-top: 132px;
+    margin-top: 125px;
   }
 
   .picture_activity5-6 {
@@ -378,19 +409,21 @@
   .picture5 {
     margin: 0 0 20px 0;
     height: 190px;
+    background-size: 102%;
   }
 
   .picture5 h2 {
-    margin-top: 132px;
+    margin-top: 125px;
   }
 
   .picture6 {
     margin: 0 0 20px 0;
     height: 190px;
+    background-position: bottom;
   }
 
   .picture6 h2 {
-    margin-top: 132px;
+    margin-top: 125px;
   }
 
   /*footer*/
@@ -399,7 +432,7 @@
     margin: 0;
     height: 460px;
     flex-direction: column;
-    padding-left: 30px;
+    padding: 0 0 30px 30px;
   }
 
   footer span {
