--- a/css/reservia.css
+++ b/css/reservia.css
@@ -548,14 +548,18 @@ input[type="text"]:focus {
   margin-bottom: 20px;
 }
 
+.picture_activity1 {
+  width: 302px;
+  margin-right: 50px;
+}
+
 .picture1 {
   background: url(../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg);
   background-size: 350%;
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 20px;
-  margin-right: 52px;
-  width: 302px;
+  width: 100%;
   height: 445px;
   box-shadow: 0px 0px 10px #d9d9d9;
 }
@@ -563,14 +567,16 @@ input[type="text"]:focus {
 .picture_activity2-3 {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 302px;
-  margin-right: 52px;
+  margin-right: 50px;
 }
 .picture2 {
   background: url(../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg);
   background-size: 105%;
   background-position: center;
   background-repeat: no-repeat;
+  width: 100%;
   height: 238px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px #d9d9d9;
@@ -581,10 +587,15 @@ input[type="text"]:focus {
   background-size: 105%;
   background-position: top;
   background-repeat: no-repeat;
-  margin: 40px 0 0 0;
+  width: 100%;
   height: 164px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px #d9d9d9;
+}
+
+.picture_activity4 {
+  width: 302px;
+  margin-right: 50px;
 }
 
 .picture4 {
@@ -592,9 +603,8 @@ input[type="text"]:focus {
   background-size: 350%;
   background-position: center;
   background-repeat: no-repeat;
-  width: 302px;
+  width: 100%;
   height: 445px;
-  margin-right: 52px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px #d9d9d9;
 }
@@ -602,6 +612,7 @@ input[type="text"]:focus {
 .picture_activity5-6 {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 302px;
 }
 
@@ -610,6 +621,7 @@ input[type="text"]:focus {
   background-size: 100%;
   background-position: top;
   background-repeat: no-repeat;
+  width: 100%;
   height: 195px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px #d9d9d9;
@@ -620,7 +632,7 @@ input[type="text"]:focus {
   background-size: 105%;
   background-position: top;
   background-repeat: no-repeat;
-  margin-top: 40px;
+  width: 100%;
   height: 208px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px #d9d9d9;
@@ -635,6 +647,10 @@ input[type="text"]:focus {
 .picture_activity a {
   text-decoration: none;
   color: black;
+  border: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 .picture1 h2 {
